tests/NormalTests/paczka1/fuzzy1/14282134.err
Error in line 7: Ba0NlKgH S343 15รถ1
Error in line 2: 03RBbAn6 S687 99,9
Error in line 19: Ba0NlKgH S536 1,0
Error in line 22: jCWbr S343 94,8
